fix: z-index

--- a/src/pages/ClosestNumber/ClosestNumber.module.scss
+++ b/src/pages/ClosestNumber/ClosestNumber.module.scss
@@ -112,6 +112,8 @@
   transition: height 1s ease-in-out;
   box-sizing: border-box;
   box-shadow: inset 0 5px 0 0 rgba(0, 0, 0, 0.2);
+  z-index: 666;
+  visibility: visible;
 
   @media screen and (max-height: 600px) {
     gap: $space-6;
